PR #3 + #4: Supabase Schema, API Setup, and Push Command
PR #3: Supabase Schema + API Setup
- Add Supabase migration (001_schema.sql) with collections, docs, ratings tables
- Create Next.js API routes: /api/health, /api/collections, /api/search
- Add middleware with rate limiting and CORS
- Configure Vercel deployment with vercel.json
- Add Supabase client and type definitions

PR #4: Push Command
- Implement manifest validation with kebab-case and semver checks
- Add IPFS upload via Pinata SDK
- Wire up CLI 'push' command with full implementation
- Add form-data dependency for multipart uploads

Both packages build successfully with TypeScript.

--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
     "target": "ES2022",
-    "module": "ESNext",
-    "moduleResolution": "bundler",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
     "lib": ["ES2022"],
     "outDir": "./dist",
     "rootDir": "./src",
@@ -10,14 +10,11 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "resolveJsonModule": true,
     "declaration": true,
     "declarationMap": true,
     "sourceMap": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true
+    "resolveJsonModule": true,
+    "allowSyntheticDefaultImports": true
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
