--- a/packages/contracts/foundry.toml
+++ b/packages/contracts/foundry.toml
@@ -2,28 +2,17 @@
 src = "src"
 out = "out"
 libs = ["lib"]
-cache_path = "cache"
-
-# Solidity version
 solc_version = "0.8.20"
-
-# Optimizer settings
 optimizer = true
 optimizer_runs = 200
+via_ir = false
 
-# Remappings
-remappings = [
-    "@openzeppelin/contracts/=lib/openzeppelin-contracts/contracts/"
-]
+[rpc_endpoints]
+base = "https://mainnet.base.org"
+base-sepolia = "https://sepolia.base.org"
 
-# Testing
-fuzz_runs = 256
+[etherscan]
+base = { key = "${ETHERSCAN_API_KEY}" }
+base-sepolia = { key = "${ETHERSCAN_API_KEY}", url = "https://api-sepolia.basescan.org/api" }
 
-# EVM version
-evm_version = "paris"
-
-# Gas reports
-gas_reports = ["*"]
-
-# Verbosity
-verbosity = 3
+# See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
